# OfflineAI

./: .gitignore  .llama-version  README.md  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts  setup_llama.sh
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
app/src/main/java/com/om/offlineai/: MainActivity.kt  OfflineAIApp.kt
app/src/main/java/com/om/offlineai/data/db/: AppDatabase.kt
app/src/main/java/com/om/offlineai/data/db/dao/: ConversationDao.kt  KnowledgeDao.kt  MemoryDao.kt  MessageDao.kt  SettingsDao.kt
app/src/main/java/com/om/offlineai/data/db/entities/: AppSettings.kt  Conversation.kt  KnowledgeItem.kt  Memory.kt  Message.kt
app/src/main/java/com/om/offlineai/data/repository/: Repositories.kt
app/src/main/java/com/om/offlineai/di/: AppModule.kt
app/src/main/java/com/om/offlineai/engine/: LlamaEngine.kt  PromptBuilder.kt
app/src/main/java/com/om/offlineai/ui/navigation/: Navigation.kt
app/src/main/java/com/om/offlineai/ui/screens/: ChatScreen.kt  ConversationListScreen.kt  OtherScreens.kt
app/src/main/java/com/om/offlineai/ui/theme/: Theme.kt
app/src/main/java/com/om/offlineai/util/: DeviceCapability.kt
app/src/main/java/com/om/offlineai/viewmodel/: ChatViewModel.kt  ModelDownloadHelper.kt  ViewModels.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_splash.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
